Change wording on form
Use clearer "raw materials" over "purchased parts"

--- a/forms/epicor_20part_properties.xml
+++ b/forms/epicor_20part_properties.xml
@@ -140,7 +140,7 @@
       <EditControlType>CheckBox</EditControlType>
     </UiElementSpec>
     <UiElementSpec xsi:type="LabelSpec">
-      <Name>(Note: serial number will be supressed for purchased parts)</Name>
+      <Name>(Note: serial number will be supressed for raw materials)</Name>
       <Font>
         <FamilyName>Tahoma</FamilyName>
         <Size>6.75</Size>
