Treat `Hardware` as a material instead of part
It was a special case anyway, so most of the associated logic just
needed to be swapped around. I simplified and collapsed some
conditionals around those cases too

--- a/forms/species_30partnum.xml
+++ b/forms/species_30partnum.xml
@@ -1219,7 +1219,7 @@
       <ContentsTextLocation>Left</ContentsTextLocation>
       <Items>
         <UiElementSpec xsi:type="TextParameterControlSpec">
-          <Name>Part (Hardware)</Name>
+          <Name>Material (Hardware)</Name>
           <ToolTip />
           <Font>
             <FamilyName />
@@ -1227,11 +1227,11 @@
             <Bold>false</Bold>
             <Italic>false</Italic>
           </Font>
-          <EnablingParameterName>FlagHardware</EnablingParameterName>
+          <EnablingParameterName>FlagMatHardware</EnablingParameterName>
           <TextLocation>Left</TextLocation>
           <ReadOnly>false</ReadOnly>
           <AlwaysReadOnly>false</AlwaysReadOnly>
-          <ParameterName>PartHardware</ParameterName>
+          <ParameterName>MatHardware</ParameterName>
           <EditControlType>TextBox</EditControlType>
           <MinimumLinesToShow>2</MinimumLinesToShow>
         </UiElementSpec>
