--- a/forms/species_20select.xml
+++ b/forms/species_20select.xml
@@ -201,7 +201,7 @@
       <TextLocation>Left</TextLocation>
       <ReadOnly>false</ReadOnly>
       <AlwaysReadOnly>false</AlwaysReadOnly>
-      <ParameterName>FlagHardware</ParameterName>
+      <ParameterName>FlagMatHardware</ParameterName>
       <EditControlType>CheckBox</EditControlType>
     </UiElementSpec>
   </Items>
